--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/jasmine": "^3.6.3",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.19.15",
-    "angular-cli-ghpages": "^0.6.2",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
